chore: fixed video on mobile

--- a/assets/css/partials/media-query.scss
+++ b/assets/css/partials/media-query.scss
@@ -1,4 +1,8 @@
 @media screen and (max-width: 1448px) {
+  .team-hero-content {
+    p { padding: 0 20px; }
+  }
+
   .closed-beta-form-modal {
     text-align: left;
     .popup-menu {
